# py-alarm-clock

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: main.py
src/clock/: buttons.py  dropdown.py  functions.py
src/py_alarm_clock/: main.py
