[project]
name = "py-alarm-clock"
version = "0.1.0"
description = "A simple alarm clock application built with Python + Flet."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Victor Bajada", email = "vic@tech1ndex.ca" }
]
dependencies = [
  "flet>=0.80.0"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
]

[tool.flet]
org = "tech1ndex.dev"
product = "py-alarm-clock"
company = "tech1ndex"
copyright = "Copyright (C) 2026 by tech1ndex.dev"

[tool.flet.app]
path = "src"